# ingest-pipeline

./: .flake8  .gitignore  .gitmodules  CODEOWNERS  README.md  pyproject.toml  test.sh
.github/workflows/: ci.yml
docker/: docker-compose.dev.yml  docker-compose.localhost.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  docker-setup.localhost.sh  docker-setup.sh  ingest-pipeline-docker.sh
docker/ingest-pipeline/: Dockerfile  entrypoint.sh  entrypoint_wrapper.sh
docker/ingest-pipeline/config/: airflow.cfg
src/ingest-pipeline/: requirements.txt
src/ingest-pipeline/airflow/: airflow_wrapper.sh  start_docker_airflow.sh  webserver_config.py
src/ingest-pipeline/instance/: app.cfg.example
src/ingest-pipeline/md/: data_collection.py  metadata_extract.py  metadata_file.py  type_base.py
src/ingest-pipeline/schemata/: bulk_update_entities_schema.yml  code_provenance_info_list_schema.json  code_provenance_info_list_schema.yml  code_provenance_info_schema.json  code_provenance_info_schema.yml  cytokit.schema.json  datacollection_metadata_schema.yml  dataset_metadata_schema.json  dataset_metadata_schema.yml  diagnose_failure_schema.yml  entity_metadata_schema.yml  enumerated_types_schema.json  enumerated_types_schema.yml  export_and_backup.yml  export_and_backup_map_schema.yml  export_and_backup_schema.yml  file_info_schema.json  (+14 more)
src/ingest_pipeline/: main.py
test/fixtures/: README.md
tests/: fixtures.py  test_email_providers_dag.py  test_files_templater.py  test_status_changer.py  test_timetables.py  test_utils.py  unittest_runner.py
(+375 files in other folders)
