[project]
name="ingest-pipeline"
requires-python="3.11"
readme="README.md"
license={file = "LICENSE"}

[project.urls]
homepage="https://hubmapconsortium.org"
repository="https://github.com/hubmapconsortium/ingest-pipeline"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src/ingest-pipeline"]
